Swagger added and changed leads to leads-advanced in routes.
